BMI Calculator in JS [DONE]

--- a/projects/index.html
+++ b/projects/index.html
@@ -19,6 +19,9 @@
         <a href="./1-BG Color Changer/index.html" class="project-link"
           >Project 1. Color Changer</a
         >
+        <a href="./2-BMI Calculator/index.html" class="project-link"
+          >Project 2. BMI Index</a
+        >
       </div>
     </main>
   </body>
